Scroll hacia arriba al pulsar un enlace

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <!-- Google Analytics -->    
+    <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-78PW23HHG8"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -37,6 +37,9 @@
 
     <!-- Vue.js -->
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
+
+    <!-- Vue Scroll To -->
+    <script src="https://cdn.jsdelivr.net/npm/vue-scrollto"></script>
 
     <title>Wikihunt 2.0</title>
 </head>
