--- a/src/public/index.html
+++ b/src/public/index.html
@@ -47,7 +47,7 @@
 <body>
     <!-- Header -->
     <!--<div id="header"></div>-->
-    <div class="container">
+    <div class="container" id="top">
         <div class="col col-12 col-sm-12 col-md-6 m-auto d-block mt-5">
             <img src="./img/Wikihunt.png" alt="wikihunt" class="img-fluid">
         </div>
