Objetivo a la vista!

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -50,6 +50,7 @@
     <div class="container" id="top">
         <div class="col col-12 col-sm-12 col-md-6 m-auto d-block mt-5">
             <img src="./img/Wikihunt.png" alt="wikihunt" class="img-fluid">
+            <span id="objectivePanel"></span>
         </div>
     </div>
 
@@ -75,9 +76,10 @@
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 
     <!-- Componentes de la pagina -->
+    <script src="./components/objective.js"></script>
     <script src="./components/election.js"></script>
     <script src="./components/game.js"></script>
-    <script src="./components/hilo.js"></script>
+    <script src="./components/hilo.js"></script>    
 
 </body>
 
