Google Search Console

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -12,6 +12,9 @@
         gtag('config', 'G-78PW23HHG8');
     </script>
 
+    <!-- Google Search Console -->
+    <meta name="google-site-verification" content="tQgvYskJsC0wrwdoSFy7rPcM3thYIXyH7Q7l7WnGFnk" />
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -79,7 +82,7 @@
     <script src="./components/objective.js"></script>
     <script src="./components/election.js"></script>
     <script src="./components/game.js"></script>
-    <script src="./components/hilo.js"></script>    
+    <script src="./components/hilo.js"></script>
 
 </body>
 
