Footer con mis datos

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -67,10 +67,10 @@
         <!-- Camino -->
         <div id="hilo"></div>
         <!-- Juego -->
-        <div id="game"></div>
-
-        <router-view></router-view>
+        <div id="game"></div>        
     </div>
+
+    <div id="footerInfo"></div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -86,6 +86,9 @@
     <script src="./components/election.js"></script>
     <script src="./components/game.js"></script>
     <script src="./components/hilo.js"></script>
+
+    <!-- Seccion Contacto -->
+    <script src="./components/footer.js"></script>
 
 </body>
 
