Cambio de padding

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -93,7 +93,7 @@
 
     <!-- Texto para que mi amiguito se divierta -->
     <hr>
-    <article class="container pb-5 articulo">
+    <article class="container articulo">
         <h2> Que es Wikihunt? </h2>
         <section>
             <h3>Primera versión</h3>
