Cambiar el Favicon

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -28,7 +28,7 @@
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/vnd.microsoft.icon" href="http://juanpabloromeropereira.es/WikiHunt/favicon.ico"
+    <link rel="icon" type="image/vnd.microsoft.icon" href="./img/favicon.png"
         sizes="16x16">
     <!-- Germania -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
