--- a/src/public/index.html
+++ b/src/public/index.html
@@ -48,7 +48,7 @@
     <!-- Vue Scroll To -->
     <script src="https://cdn.jsdelivr.net/npm/vue-scrollto"></script>
 
-    <title>Wikihunt 2.0</title>
+    <title>Wikihunt</title>
 </head>
 
 <body>
