Update para arreglar el juego!

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <!-- Google Analytics -->
@@ -43,7 +43,7 @@
     <link rel="stylesheet" href="./index.css">
 
     <!-- Vue.js -->
-    <script src="https://unpkg.com/vue/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
 
     <!-- Vue Scroll To -->
     <script src="https://cdn.jsdelivr.net/npm/vue-scrollto"></script>
